--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             <input type="text" id="username" placeholder="Username">
             <input type="password" id="password" placeholder="Password">
             <button onclick="login()">Log In</button>
-            <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
+            <p class="signup-link">Don't have an account? <a href="https://accounts.google.com/signup">Sign up</a></p>
         </div>
     </div>
     <script> src="static/scripts.js"</script>
